# bunny-estimates

./: .env  .gitignore  README.md  docker-compose.yml
.devcontainer/snout-container/: devcontainer.json
.devcontainer/tail-container/: devcontainer.json
estimates-snout/: Dockerfile  app.vue  nuxt.config.ts  package.json
estimates-snout/components/: CardsList.vue  Counter.vue  ParticipantsList.vue  RenameInput.vue  RoomContent.vue  StartRoundButton.vue
estimates-snout/composables/: useRoom.ts
estimates-snout/layouts/: default.vue
estimates-snout/pages/: index.vue
estimates-snout/pages/room/: [id].vue
estimates-snout/pages/room/resume/: [id].vue
estimates-tail/: Dockerfile  manage.py  pyproject.toml
estimates-tail/estimates/: admin.py  api.py  consumers.py  models.py  routing.py  schemas.py
estimates-tail/estimates/migrations/: 0001_initial.py  0002_task_remove_topic_description_remove_topic_title_and_more.py  0003_rename_identifies_room_public_name.py  0004_alter_room_public_name.py  0005_room_finished_task_completed_vote_voter_external_id.py  0006_alter_vote_voter_external_id.py  0007_remove_room_finished.py
estimates-tail/estimates_tail/: api.py  asgi.py  settings.py  urls.py  wsgi.py
